--- a/calico-cloud_versioned_docs/version-18/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-cloud_versioned_docs/version-18/networking/egress/egress-gateway-on-prem.mdx
@@ -337,6 +337,15 @@ If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSe
 The Tigera Operator configures egress gateways to use the same iptables backend as `calico-node`.
 To modify the iptables backend for egress gateways, you must change the `iptablesBackend` field in the [Felix configuration](../../reference/resources/felixconfig.mdx).
 
+
+### Configure IP autodetection for dual-ToR clusters.
+
+If you plan to use Egress Gateways in a [dual-ToR cluster](../configuring/dual-tor.mdx), you must also adjust the {{nodecontainer}} IP
+auto-detection method to pick up the stable IP, for example using the `interface: lo` setting
+(The default first-found setting skips over the lo interface). This can be configured via the
+{{prodname}} [Installation resource](../../reference/installation/api.mdx#operator.tigera.io/v1.NodeAddressAutodetection).
+
+
 ### Configure namespaces and pods to use egress gateways
 
 You can configure namespaces and pods to use an egress gateway by:
@@ -344,6 +353,7 @@ You can configure namespaces and pods to use an egress gateway by:
 * applying an egress gateway policy to the namespace or pod.
 
 Using an egress gateway policy is more complicated, but it allows advanced use cases.
+
 
 #### Configure a namespace or pod to use an egress gateway (annotation method)
 
