--- a/calico-cloud_versioned_docs/version-3.17/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/networking/egress/egress-gateway-on-prem.mdx
@@ -324,6 +324,15 @@ The health port `8080` is used by:
   no policy is required to allow it. {{prodname}} only sends probes to egress gateway pods that have a named
   "health" port. This ensures that during an upgrade, health probes are only sent to upgraded egress gateways.
 
+
+### Configure IP autodetection for dual-ToR clusters.
+
+If you plan to use Egress Gateways in a [dual-ToR cluster](../configuring/dual-tor.mdx), you must also adjust the {{nodecontainer}} IP
+auto-detection method to pick up the stable IP, for example using the `interface: lo` setting
+(The default first-found setting skips over the lo interface). This can be configured via the
+{{prodname}} [Installation resource](../../reference/installation/api.mdx#operator.tigera.io/v1.NodeAddressAutodetection).
+
+
 ### Configuring namespaces and pods to use egress gateways
 
 You can configure namespaces and pods to use an egress gateway by:
@@ -331,6 +340,7 @@ You can configure namespaces and pods to use an egress gateway by:
 * applying an egress gateway policy to the namespace or pod.
 
 Using an egress gateway policy is more complicated, but it allows advanced use cases.
+
 
 #### Configure a namespace or pod to use an egress gateway (annotation method)
 
