--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-on-prem.mdx
@@ -421,6 +421,15 @@ Set the `serviceAccount` field in the `egress-gateway` `Deployment` to use the c
 kubectl -n default set serviceaccount deployment egress-gateway  tigera-egress-gateway
 ```
 
+
+### Configure IP autodetection for dual-ToR clusters.
+
+If you plan to use Egress Gateways in a [dual-ToR cluster](../configuring/dual-tor.mdx), you must also adjust the {{nodecontainer}} IP
+auto-detection method to pick up the stable IP, for example using the `interface: lo` setting
+(The default first-found setting skips over the lo interface). This can be configured via the
+{{prodname}} [Installation resource](../../reference/installation/api.mdx#operator.tigera.io/v1.NodeAddressAutodetection).
+
+
 ### Configure a Namespace or Pod to use egress gateways
 
 In a {{prodname}} deployment, the Kubernetes Namespace and Pod resources honor annotations that
