--- a/calico-enterprise_versioned_docs/version-3.17/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/networking/egress/egress-gateway-on-prem.mdx
@@ -172,6 +172,8 @@ patch release.
 
 - Calico CNI
 
+- 
+
 ## How to
 
 - [Enable egress gateway support](#enable-egress-gateway-support)
@@ -335,6 +337,15 @@ If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSe
 
 The Tigera Operator configures egress gateways to use the same iptables backend as `calico-node`.
 To modify the iptables backend for egress gateways, you must change the `iptablesBackend` field in the [Felix configuration](../../reference/resources/felixconfig.mdx).
+
+
+### Configure IP autodetection for dual-ToR clusters.
+
+If you plan to use Egress Gateways in a [dual-ToR cluster](../configuring/dual-tor.mdx), you must also adjust the {{nodecontainer}} IP
+auto-detection method to pick up the stable IP, for example using the `interface: lo` setting
+(The default first-found setting skips over the lo interface). This can be configured via the
+{{prodname}} [Installation resource](../../reference/installation/api.mdx#operator.tigera.io/v1.NodeAddressAutodetection).
+
 
 ### Configuring namespaces and pods to use egress gateways
 
