--- a/calico-enterprise_versioned_docs/version-3.18/networking/configuring/dual-tor.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/networking/configuring/dual-tor.mdx
@@ -643,6 +643,15 @@ as their source and destination. For example:
 
 The only connections using interface-specific addresses should be BGP.
 
+:::note
+
+If you plan to use [Egress Gateways](../egress/egress-gateway-on-prem.mdx) in your cluster, you must also adjust the {{nodecontainer}} IP
+auto-detection method to pick up the stable IP, for example using the `interface: lo` setting
+(The default first-found setting skips over the lo interface). This can be configured via the
+{{prodname}} [Installation resource](../../reference/installation/api.mdx#operator.tigera.io/v1.NodeAddressAutodetection).
+
+:::
+
 If you look at the Linux routing table on any cluster node, you should see ECMP routes
 like this to the loopback address of every other node in other racks:
 
