fix helm cunstomization - number of replicas

--- a/calico-enterprise/reference/installation/helm_customization.mdx
+++ b/calico-enterprise/reference/installation/helm_customization.mdx
@@ -98,7 +98,7 @@ The components for the replicas are:
 - tigera-apiserver
 - tigera-dex
 - tigera-kibana
-- calico-node
+- es-gateway
 
 To set a specific replica for these components, you must provide the setting in your custom values.yaml file:
 ```yaml
