--- a/calico-enterprise_versioned_docs/version-3.18/reference/installation/helm_customization.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/reference/installation/helm_customization.mdx
@@ -98,7 +98,7 @@ The components for the replicas are:
 - tigera-apiserver
 - tigera-dex
 - tigera-kibana
-- calico-node
+- es-gateway
 
 To set a specific replica for these components, you must provide the setting in your custom values.yaml file:
 ```yaml
