--- a/calico-cloud_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -137,12 +137,7 @@ In Service Graph, go to the service and click the HTTP tab. You will see the fol
 
 #### Kibana
 
-To view WAF events In Kibana:
-
-1. Create the `tigera_secure_ee_waf*` index pattern. For help with index patterns, see [Kibana index pattern](../visibility/kibana).
-2. Select the `tigera_secure_ee_waf*` index pattern. 
-
-You should see the relevant WAF assessment from your request.
+To view WAF events In Kibana, select the `tigera_secure_ee_waf*` index pattern.
 
 ### Create global alerts
 
