--- a/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
@@ -312,9 +312,7 @@ To view WAF events in a centralized security events dashboard, go to: **Threat d
 
 #### Kibana
 
-To view WAF events In Kibana:
-
-1. Select the `tigera_secure_ee_waf*` index pattern. 
+To view WAF events In Kibana, select the `tigera_secure_ee_waf*` index pattern.
 
 #### Disable WAF for a service
 
