[RS-1186] Update security events FAQ to mention restore option

--- a/calico-cloud/threat/security-event-management.mdx
+++ b/calico-cloud/threat/security-event-management.mdx
@@ -83,7 +83,7 @@ No. {{prodname}} security events do not encompass all types of alerts nor all se
 
 **What does dismissing a security event do?**
 
-Dismissing a security event hides it from view. Use the toggle button to show/hide. There is no option to undo a dismissed alert.
+Dismissing a security event hides it from view. Use the toggle button to show/hide. If dismissed by mistake, a security event can be restored.
 
 **Why are some fields in columns blank?**
 
