Fix projectcalico endpoint

--- a/calico-cloud/get-started/connect/cc-arch-diagram.mdx
+++ b/calico-cloud/get-started/connect/cc-arch-diagram.mdx
@@ -36,7 +36,7 @@ The following diagram shows the major components in a managed cluster, followed 
 | Compliance                     | Generates compliance reports for the Kubernetes cluster. Reports are based on archived flow and audit logs for Calico Cloud resources, plus any audit logs you’ve configured for Kubernetes resources in the Kubernetes API server. Compliance reports provide the following high-level information:<br /><br />&bull; Endpoints explicitly protected using ingress or egress policy<br />&bull; Policies and services<br />   - Policies and services associated with endpoints<br />   - Policy audit logs <br />&bull; Traffic<br />   - Allowed ingress/egress traffic to/from namespaces, and to/from the internet Compliance includes these components: <br /><br />**compliance-snapshotter** <br />Handles listing of required Kubernetes and {{prodname}}configuration and pushes snapshots to Elasticsearch. Snapshots give you visibility into configuration changes, and how the cluster-wide configuration has evolved within a reporting interval.<br /><br />**compliance-reporter**<br />Handles report generation. Reads configuration history from Elasticsearch and determines time evolution of cluster-wide configuration, including relationships between policies, endpoints, services, and network sets. Data is then passed through a zero-trust aggregator to determine the “worst-case outliers” in the reporting interval.<br /><br />**compliance-controller**<br />Reads report configuration and manages creation, deletion, and monitoring of report generation jobs.<br /><br />**compliance-benchmarker**<br />A daemonset that runs checks in the CIS Kubernetes Benchmark on each node so you can see if Kubernetes is securely deployed.<br /> | &bull; TCP 8080 to Guardian<br />&bull; TCP 6443 to Kubernetes API server |
 | Fluentd                        | Open-source data collector for unified logging. Collects and forwards {{prodname}} logs (flows, DNS, L7) to log storage. | &bull; TCP 8080 to Guardian<br />&bull;  TCP 9080 from Prometheus API service |
 | Guardian                       | An agent running in each managed cluster that proxies communication between the {{prodname}} tunnel server and your managed cluster. Secured using TLS tunnels.<br /> | &bull; Port 9000 to tunnel server<br />&bull; TCP 6443 to Kubernetes API server<br />&bull; TCP 6443 from {{prodname}} components |
-| Installation endpoints         | Endpoints at  `*.calicocloud.io` and `*.`projectcalico.org`. | TCP 443 for both                                             |
+| Installation endpoints         | Endpoints at  `*.calicocloud.io` and `*.projectcalico.org`. | TCP 443 for both                                             |
 | Intrusion detection controller | Handles integrations with threat intelligence feeds and {{prodname}} custom alerts. | &bull; TCP 8080 to Guardian<br />&bull; TCP 6443 to Kubernetes API server |
 | Image Assurance                | Identifies vulnerabilities in container images that you deploy to Kubernetes clusters.  Components of interest are: <br /><br />**Admission controller**<br />Uses Kubernetes Validating Webhook Configuration to control which images can be used to create pods based on scan results. <br /><br />**API**<br />Isolates tenant data and authorizes all external access to Image Assurance data. **Note:** {{prodname}} does not store registry credentials in its database and does not pull customer images into the {{prodname}} control plane.<br /> | &bull;  TCP 8080 to Guardian<br /> &bull;  TCP 6443 to Kubernetes API server |
 | Kubernetes API server          | A Kubernetes component that validates and configures data for the API objects (for example, pods, services, and others). <br /> | TCP 6443 (from all components)                               |
