DOCS-1720-IA-Updates-3.18

--- a/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
+++ b/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
@@ -31,14 +31,12 @@ Vulnerability detection consists of these steps:
 - OpenShift
 - GCP-Kubeadm
 - AWS-Kubeadm
-- AKS
 - GKE
 
-**Required**
-
-- Cluster
- - Containerd is the container runtime
- - Containerd must be using overlayfs or native file system snapshotter
+**Cluster requirements**
+- Containerd is the container runtime
+- AKS clusters: if you are using Kubernetes v1.19 or higher, containerd should be your default runtime
+- Containerd must be using overlays or native file system snapshotter
 
 ## How to
 - [Get latest version of Image Assurance](#get-latest-version-of-image-assurance)
