--- a/calico-cloud/operations/cluster-management.mdx
+++ b/calico-cloud/operations/cluster-management.mdx
@@ -15,7 +15,7 @@ To connect new clusters to {{prodname}}, select Managed Clusters in the left nav
 - Only users with either the `Owner` or `Admin` [roles](../users/user-management.mdx) are permitted to delete managed clusters.
 - The managed cluster must not be connected. For help with disconnecting your managed cluster, see [how to uninstall {{prodname}}](disconnect.mdx).
 
-### Delete a managed cluster
+### Remove a cluster
 
 1. In Manager UI, go to **Managed Clusters**.
 1. For the cluster you want to delete, select **Actions** > **Delete**.
