--- a/calico-cloud/operations/cluster-management.mdx
+++ b/calico-cloud/operations/cluster-management.mdx
@@ -18,7 +18,7 @@ To connect new clusters to {{prodname}}, select Managed Clusters in the left nav
 ### Remove a cluster
 
 1. In Manager UI, go to **Managed Clusters**.
-1. For the cluster you want to delete, select **Actions** > **Delete**.
+1. For the cluster you want to remove, select **Actions** > **Delete**, and then confirm your choice by selecting **Delete cluster**.
 1. Verify details on the confirmation modal and click on **Delete** to confirm the managed cluster deletion.
 
 ![delete managed cluster](/img/calico-cloud/managed-clusters-delete.png)
