Update prerequisite for cluster disconnected

--- a/calico-cloud/operations/cluster-management.mdx
+++ b/calico-cloud/operations/cluster-management.mdx
@@ -13,7 +13,7 @@ To connect new clusters to {{prodname}}, select Managed Clusters in the left nav
 ### Prerequisites
 
 - You are signed in to Manager UI and you have [Owner or Admin privileges](../users/user-management.mdx).
-- The managed cluster must not be connected. For help with disconnecting your managed cluster, see [how to uninstall {{prodname}}](disconnect.mdx).
+- The cluster you want to remove is [disconnected from {{prodname}}](disconnect.mdx).
 
 ### Remove a cluster
 
