Fix recover procedure

--- a/calico-cloud/operations/cluster-management.mdx
+++ b/calico-cloud/operations/cluster-management.mdx
@@ -29,7 +29,7 @@ If a new managed cluster is connected with the same name as a previously deleted
 
 ### Recover a deleted managed cluster
 
-If you inadvertently delete a managed cluster, select **Actions** > **Reinstall** to restore it. For help with reinstalling a managed cluster see [Upgrade {{prodname}}](../get-started/upgrade-cluster).
+If you inadvertently delete a managed cluster, you may restore it by connecting your cluster using the same name as the previously deleted cluster. For help with connecting a managed cluster see [Connect a cluster to {{prodname}}](../get-started/connect/install-cluster.mdx).
 
 ## Manage and monitor multiple clusters in Manager UI
 
