Copy changes to cc version-18

--- a/calico-cloud_versioned_docs/version-18/operations/cluster-management.mdx
+++ b/calico-cloud_versioned_docs/version-18/operations/cluster-management.mdx
@@ -8,21 +8,16 @@ description: Manage cluster storage, add new clusters, and configure alerts.
 
 To connect new clusters to {{prodname}}, select Managed Clusters in the left nav, and click **Connect Cluster**.
 
-## Delete a managed cluster
+## Remove a cluster from the managed clusters list
 
 ### Prerequisites
 
-- Only users with either the `Owner` or `Admin` [roles](../users/user-management.mdx) are permitted to delete managed clusters.
-- The managed cluster must not be connected. For help with disconnecting your managed cluster, see [how to uninstall {{prodname}}](disconnect.mdx).
+- You are signed in to Manager UI and you have [Owner or Admin privileges](../users/user-management.mdx).
+- The cluster you want to remove is [disconnected from {{prodname}}](disconnect.mdx).
 
-### Delete a managed cluster
+### Remove a cluster
 
-1. In Manager UI, go to **Managed Clusters**.
-1. For the cluster you want to delete, select **Actions** > **Delete**.
-1. Verify details on the confirmation modal and click on **Delete** to confirm the managed cluster deletion.
-
-![delete managed cluster](/img/calico-cloud/managed-clusters-delete.png)
-![delete managed cluster modal](/img/calico-cloud/managed-clusters-delete-step1.png)
+For the cluster you want to remove, select **Actions** > **Delete**, and then confirm your choice by selecting **Delete cluster**.
 
 :::note
 
@@ -34,7 +29,7 @@ If a new managed cluster is connected with the same name as a previously deleted
 
 ### Recover a deleted managed cluster
 
-If you inadvertently delete a managed cluster, select **Actions** > **Reinstall** to restore it. For help with reinstalling a managed cluster see [Upgrade {{prodname}}](../get-started/upgrade-cluster).
+If you inadvertently delete a managed cluster, you may restore it by connecting your cluster using the same name as the previously deleted cluster. For help with connecting a managed cluster see [Connect a cluster to {{prodname}}](../get-started/connect/install-cluster.mdx).
 
 ## Manage and monitor multiple clusters in Manager UI
 
