[EV-3369] Remove numbered bullets.

--- a/calico-enterprise/getting-started/install-on-clusters/kubernetes/helm.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/kubernetes/helm.mdx
@@ -34,7 +34,7 @@ In this guide, you install the Tigera Calico operator and custom resource defini
 
 ### Download the Helm chart
 
-1. Add the Calico helm repo:
+Add the Calico helm repo:
 
   ```bash
   helm repo add projectcalico https://docs.tigera.io/calico/charts
@@ -122,8 +122,6 @@ To install a standard {{prodname}} cluster with Helm:
 
 </TabItem>
 <TabItem label="Management" value="Management">
-
-#### Install a management cluster using Helm.
 
 To install a {{prodname}} [management](../../../multicluster/create-a-management-cluster#value) cluster with Helm:
 
@@ -214,7 +212,7 @@ To install a {{prodname}} [management](../../../multicluster/create-a-management
 
 To access resources in a managed cluster from the {{prodname}} Manager within the management cluster, the logged-in user must have appropriate permissions defined in that managed cluster (clusterrole bindings).
 
-1. Create an admin user, `mcm-user`, in the default namespace with full permissions, and token.
+Create an admin user, `mcm-user`, in the default namespace with full permissions, and token.
 
   ```bash
   kubectl create sa mcm-user
@@ -228,8 +226,6 @@ To access resources in a managed cluster from the {{prodname}} Manager within th
 
 </TabItem>
 <TabItem label="Managed" value="Managed">
-
-#### Install a managed cluster using Helm.
 
 To install a {{prodname}} [managed](../../../multicluster/create-a-managed-cluster#value) cluster with Helm:
 
@@ -288,7 +284,7 @@ To install a {{prodname}} [managed](../../../multicluster/create-a-managed-clust
 
   To access resources belonging to a managed cluster from the {{prodname}} Manager UI, the service or user account used to log in must have appropriate permissions defined in the managed cluster.
 
-1. Define admin-level permissions for the service account `mcm-user` we created to log in to the Manager UI. Run the following command against your managed cluster.
+Define admin-level permissions for the service account `mcm-user` we created to log in to the Manager UI. Run the following command against your managed cluster.
 
   ```bash
   kubectl create clusterrolebinding mcm-user-admin --clusterrole=tigera-network-admin --serviceaccount=default:mcm-user
