Cleans up the RN template for CE next

--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -4,19 +4,19 @@ description: What's new, and why features provide value for upgrading.
 
 # Calico Enterprise X.Y release notes
 
-Boilerplate summary text
+Intro text.
 
 ## New features and enhancements
 
 ### Feature one
 
-stuff about this feature
+Here's what you need to know about this feature.
 
 For more information, see [link](https://docs.tigera.io).
 
 ### Feature two
 
-stuff about this feature
+Here's what you need to know about this feature.
 
 For more information, see [link](https://docs.tigera.io).
 
@@ -46,21 +46,18 @@ For more information, see [link](https://docs.tigera.io).
 
 <!-- Follow this template: Problem-Cause-Fix-Result -->
 
-* Previously, this bad thing happened, which made it impossible to do this.
-  We fixed it, so now you can do the thing you wanted to do.
-* Bla bla bla bug 2.
+* Bug 1.
+* Bug 2.
 
 ## Security fixes
 
-* Description of security fix.
-* Another description of security fix.
+* Security fix.
+
 
 ## Known issues
 
-* This thing doesn't work as expected.
-  Here's the workaround: bla bla bla
-* This other thing doesn't work as expected.
-  There's no workaround.
+* Known issue 1.
+* Known issue 2.
 
 ## Release details
 
