DOCS-1822-Add-Helm-mcm

--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -14,11 +14,11 @@ Added support for VXLAN overlay networking to federated endpoint indentity and s
 
 For more information, see [Configure federated endpoint identity and services](../multicluster/federation/kubeconfig).
 
-### Feature two
+### Helm installation and upgrade for multi-cluster management deployments
 
-Here's what you need to know about this feature.
+We've added the option to use Helm to install and upgrade if you are using the multi-cluster management feature. With Helm, your DevOps teams can automate these complex deployments more easily.
 
-For more information, see [link](https://docs.tigera.io).
+For more information, see [Helm for multi-cluster management](../multicluster/helm/).
 
 <!-- We can break this up by component. H3 subheads or additions to titles -->
 
