--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -2,7 +2,7 @@
 description: What's new, and why features provide value for upgrading.
 ---
 
-# Calico Enterprise X.Y release notes
+# Calico Open Source X.Y release notes
 
 Intro text.
 
@@ -13,6 +13,10 @@ Intro text.
 Added support for VXLAN overlay networking to federated endpoint indentity and services. Using VXLAN overlay networking alleviates the work of configuring routable pod CIDRs for cross-cluster connectivity, and provides a solution if IPs are exhausted. {{prodname}} uses the VXLAN overlay network to establish pod CIDR routes to remote nodes.
 
 For more information, see [Configure federated endpoint identity and services](../multicluster/federation/kubeconfig).
+
+<!-- We can break this up by component. H3 subheads or additions to titles -->
+
+<!-- Optional, as needed
 
 ### Feature two
 
