--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -2,6 +2,85 @@
 description: What's new, and why features provide value for upgrading.
 ---
 
-# Release notes
+# Calico Enterprise X.Y release notes
 
-<ReleaseNotes />
+Intro text.
+
+## New features and enhancements
+
+### VXLAN encapsulation for cross-cluster connectivity
+
+Added support for VXLAN overlay networking to federated endpoint indentity and services. Using VXLAN overlay networking alleviates the work of configuring routable pod CIDRs for cross-cluster connectivity, and provides a solution if IPs are exhausted. {{prodname}} uses the VXLAN overlay network to establish pod CIDR routes to remote nodes.
+
+For more information, see [Configure federated endpoint identity and services](../multicluster/federation/kubeconfig).
+
+### Feature two
+
+Here's what you need to know about this feature.
+
+For more information, see [link](https://docs.tigera.io).
+
+<!-- We can break this up by component. H3 subheads or additions to titles -->
+
+<!-- Optional, as needed
+
+## Deprecated and removed features
+
+The following features are being deprecated or removed in this release:
+
+-->
+
+<!-- Optional, as needed
+## Technology Preview features
+
+A sentence that explains what technology preview features are.
+
+### TP feature name
+
+stuff about this feature
+
+For more information, see [link](https://docs.tigera.io).
+-->
+
+## Bug fixes
+
+<!-- Follow this template: Problem-Cause-Fix-Result -->
+
+* Bug 1.
+* Bug 2.
+
+## Security fixes
+
+* Security fix.
+
+
+## Known issues
+
+* Known issue 1.
+* Known issue 2.
+
+## Release details
+
+### Calico Open Source X.Y.0 early preview release
+
+DD M YYYY
+
+### Calico Open Source X.Y.1 general availability release
+
+DD M YYYY
+
+#### New features
+
+### HPC-based Windows install and upgrade
+
+Adds HPC-based (HostProcess/Privileged containers) install and upgrade for Windows nodes. {{prodname}} will bootstrap Windows worker nodes just like Linux worker nodes. Platform engineers can 1) scale their Windows worker nodes with an auto-scaling node pool without having to bootstrap each node manually and 2) upgrade {{prodname}} deployments without having to manually upgrade each node one at a time.
+
+For more information, see [Quickstart](../getting-started/kubernetes/windows-calico/quickstart#install-calico-for-windows-using-hostprocess-containers).
+
+#### Enhancements
+
+#### Bug fixes
+
+#### How to update
+
+To install this update on your cluster, see [Install a patch release](../getting-started/manifest-archive.mdx).
