DOCS-1758: [TSLA-4906] Managed cluster deletion docs (#961)
Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

--- a/calico-cloud/operations/cluster-management.mdx
+++ b/calico-cloud/operations/cluster-management.mdx
@@ -8,9 +8,28 @@ description: Manage cluster storage, add new clusters, and configure alerts.
 
 To connect new clusters to {{prodname}}, select Managed Clusters in the left nav, and click **Connect Cluster**.
 
-## Recover a deleted managed cluster
+## Remove a cluster from the managed clusters list
 
-If you inadvertenty delete a managed cluster, rerun the `curl` command and the cluster will reconnect to {{prodname}}.
+### Prerequisites
+
+- You are signed in to Manager UI and you have [Owner or Admin privileges](../users/user-management.mdx).
+- The cluster you want to remove is [disconnected from {{prodname}}](disconnect.mdx).
+
+### Remove a cluster
+
+For the cluster you want to remove, select **Actions** > **Delete**, and then confirm your choice by selecting **Delete cluster**.
+
+:::note
+
+Deleting a managed cluster does not remove {{prodname}} logs.
+
+If a new managed cluster is connected with the same name as a previously deleted managed cluster, the logs associated with the deleted managed cluster will be displayed as if they belong to the new managed cluster.
+
+:::
+
+### Recover a deleted managed cluster
+
+If you inadvertently delete a managed cluster, you may restore it by connecting your cluster using the same name as the previously deleted cluster. For help with connecting a managed cluster see [Connect a cluster to {{prodname}}](../get-started/connect/install-cluster.mdx).
 
 ## Manage and monitor multiple clusters in Manager UI
 
